[gd_scene load_steps=4 format=3 uid="uid://4rxoeb3wyu0h"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_player"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hitbox"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hurtbox"]
radius = 16.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 0
script = ExtResource("1_player")

[node name="PlayerSprite" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hurtbox")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_hitbox")
debug_color = Color(0.956863, 0.266667, 0.266667, 0.419608)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
monitoring = true
monitorable = false

[node name="HurtboxShape" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_hurtbox")
debug_color = Color(0.262745, 0.678431, 0.956863, 0.419608)

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
